Fixed unnecessary white space above header in mobile format

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,6 +239,7 @@ body{
 @media screen and (max-width:768px) and (min-width:641px){
     html, body, .main_content, .image, .header, #name, footer, .hvr-radial-out{
         width:100%;
+        box-sizing:border-box;
         margin:auto;
     }
 
@@ -304,10 +305,10 @@ body{
     html, body, .main_content, .image, .header, #name, footer, .hvr-radial-out{
         box-sizing:border-box;
         width:100%;
-        float:center;
+        /* float:center; */
         margin-left:auto;
         margin-right:auto;
-        height:auto;
+        /* height:auto; */
     }
     
     #name{
@@ -328,6 +329,8 @@ body{
         font-size:2.5vw;
         padding:0px;
         margin:0px;
+        top:0;
+        margin-top:-10px;
     }
 
     .header a:visited, .header a:link, .header a, .header a:active, .dropdown{
@@ -352,7 +355,6 @@ body{
         top: 0;
         height: 25%;
     }
-
 
     footer{
         font-size:2vw;
